@@ -1,5 +1,9 @@
 [Changes 1.2.2]
 
+* Cast check_ext_mail and check_ext_mail_status function pointers to the
+  correct type before using them. This might have caused a problem with
+  the qmail plugin on 64 bit architectures. (caf)
+
 * Fix bug in DCC privileged port detection logic. (caf)
 
 * Don't show DCC "Handshake failed" message twice, improve the message itself
